--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <TITLE>Hao Zheng</TITLE>
-    <link rel="stylesheet" type="text/css" href="myStyle.css">
+    <link rel="stylesheet" type="text/css" href="https://sees-usf.github.io/myStyle.css">
 </head>
 <body>
 
