--- a/index.htm
+++ b/index.htm
@@ -29,6 +29,7 @@
   <div class="column">
 	<ul>
 		<li>ML models and algorithms</li>	
+		<li>ML architectures</li>
 		<li>ASIC ML</li>
 		<li>FPGA ML</li>	
 		<li>Other technologiesML</li>	
