--- a/cps-principles/f19/index.htm
+++ b/cps-principles/f19/index.htm
@@ -10,24 +10,14 @@ B { font-size: 18pt; line-height: 200px }
 </HEAD>
 
 <body>
-<div class="header">
-  <div>
-	<img src="images/logo-sees.gif" width="16%" align="left" style="margin:0px 10px 0 0"> 
-	</div>
-	
-	<div style="margin-left: 17%;"> 
-	<h1 align="left">The SEES Lab</h1>
-	<h2 align="left">Research for Secure, Efficient, and Evolvable Computing Systems</h2>
-	</div>
-</div>
-
 <div class="row">
   <div class="column-left">  </div>
   
   <div class="column">
-<h1>CIS 4930/6930 Principles of Cyber-Physical Systems</h1>
+	  <h1 style="background-color: green font-size:5vw color:white">CIS 4930/6930</h1>
+	  <h1>Principles of Cyber-Physical Systems</h1>
 
-<HR size=6>
+	  <hr size=5vw>
 
 
 <H2>Schedules</H2>
