--- a/index.htm
+++ b/index.htm
@@ -72,7 +72,7 @@ design automation, efficient hardware design of machine learning algorithms, and
    </div> 
   </div>
   
-  <div class="column-left">
+  <div class="column-right">
 	<img src="images/iot.png" width="100%"> 
   </div>
 </div>
