--- a/teach/index.htm
+++ b/teach/index.htm
@@ -23,7 +23,7 @@
   <div class="column-left">
   <div class="vertical-menu">
   <a href="../index.htm">Home</a>
-  <a href="../research/index.html">Research</a>
+  <a href="../research/index.htm">Research</a>
   <a href="#" class="active">Teaching</a>
   <a href="../people">People</a>
   <a href="../contacts/index.htm">Contact</a>
