--- a/research/index.htm
+++ b/research/index.htm
@@ -56,8 +56,14 @@
   	<li>
 		<strong>Testing, verification, and validation of software, hardware, and embedded systems</strong>
 			<ul>
-			<li><strong><a href="https://github.com/sees-usf/ProbMC">Scalable methods for probabilistic model checking</a></strong></li>
-			<li><strong><a href="https://github.com/sees-usf/MCCS">Efficient model checking of parallel and distributed systems</a></strong></li>
+			<li>
+			   <strong><a href="https://github.com/sees-usf/ProbMC">Scalable methods for probabilistic model checking</a></strong> 
+				Recetnly, we received an NSF award to support this project. If you are interested in joining this project, 
+				please visit the project page by cliking the porject title.
+			</li>
+			<li>
+			   <strong><a href="https://github.com/sees-usf/MCCS">Efficient model checking of parallel and distributed systems</a></strong>
+			</li>
 			</ul>
   	</li>
   	</ul>
