--- a/index.htm
+++ b/index.htm
@@ -70,6 +70,20 @@ design automation, efficient hardware design of machine learning algorithms, and
 	reasoning of hardware and software systems. 
    </p>
    </div> 
+	  
+    <div class="card">
+   	<p class="notop">
+  	<strong>To interested graduate students</strong>: dedicated and hardworking students are welcome to join us
+  	to work on different projects as outlined above.  If you are interested in something that is
+  	related but not listed, please do share your thoughts.  When you contact us, please explain
+  	briefly why you would like to apply, and why you are interested in the area of yoru choice.
+  	</p>
+  	
+  	<p class="nobot">
+		<strong>Undergraduate students</strong> with good academic records and strong self-learning capabilities are also 
+			welcome to contact us for research experience opportunities.  
+	</p>
+    </div>
   </div>
   
   <div class="column-right">
