--- a/index.htm
+++ b/index.htm
@@ -63,11 +63,11 @@
     <p class="nobot">
     Our overall research objective is to address challenges as outlined above, and future challenges 
     brought by new applications or as results of new technologies.  
-    My general research areas include computer architecture, embedded systems, VLSI design, and electronic 
-design automation.  Currently, we are looking at hardware safety and security assurance 
+    Our broad research areas include **_formal methods_**, **_computer architecture_**, **_embedded systems_**, **_VLSI design_**, and  
+**_design automation_**.  Currently, we are looking at hardware safety and security assurance 
 by investigating various design time and runtime methods and techniques, application of machine learning in 
 design automation, efficient hardware design of machine learning algorithms, and formal verification and 
-	reasoning of hardware and software systems. 
+	reasoning of hardware and software systems. Please visit our research page for more information
    </p>
    </div> 
 	  
