--- a/people/index.htm
+++ b/people/index.htm
@@ -34,6 +34,7 @@
   </div>
   
   <div class="column">
+		<div class="card">
     <p style="margin-top:4vw">
   	<h2>Faculty Advisor</h2>
   	<ul>
@@ -57,15 +58,15 @@
       <li>Yuting Cao, MS<li>
       <li>Hernan Palombo, MS</li>
   		<li>Yingying Zhang, MS</li>
-      </i>Ryan Mabry, MS</li>
+      <li>Ryan Mabry, MS</li>
 	  	<li>Jared Ahrens, MS</li>
-      <li>Emmanual Rodriguez<li>
+      <li>Emmanual Rodriguez</li>
   	</ul>
   	</p>
   </div>
-      
+	</div>
+
   <div class="column-right">
-  
   </div>
 </div>
 
