--- a/people/index.htm
+++ b/people/index.htm
@@ -55,7 +55,7 @@
   	<h2>Graduated Students</h2>
   	<ul>
   		<li>Haiqiong Yao, PhD</li>
-      <li>Yuting Cao, MS<li>
+      <li>Yuting Cao, MS</li>
       <li>Hernan Palombo, MS</li>
   		<li>Yingying Zhang, MS</li>
       <li>Ryan Mabry, MS</li>
