--- a/people/index.htm
+++ b/people/index.htm
@@ -46,7 +46,7 @@
   	<h2>Current Students</h2>
   	<ul>
   		<li>Md Rubel Ahmed, PhD</li>
-  		<li>Yuting Cao, PhD</li>
+		<li>Yuting Cao, PhD, <a href=" http://cao2.myweb.usf.edu">webpage</a></li>
 	  	<li>Hernan Palombo, PhD</li>
   	</ul>
   	</p>
