--- a/people/index.htm
+++ b/people/index.htm
@@ -47,7 +47,7 @@
   	<ul>
   		<li>Md Rubel Ahmed, PhD</li>
 		<li>Yuting Cao, PhD, <a href=" http://cao2.myweb.usf.edu">webpage</a></li>
-	  	<li>Hernan Palombo, PhD</li>
+			<li>Hernan Palombo, PhD, <a href="https://rubelahmed57.github.io/">webpage</a></li>
   	</ul>
   	</p>
   	
