--- a/people/index.htm
+++ b/people/index.htm
@@ -45,9 +45,9 @@
   	<p style="margin-top:4vw">
   	<h2>Current Students</h2>
   	<ul>
-  		<li>Md Rubel Ahmed, PhD</li>
+  		<li>Md Rubel Ahmed, PhD, <a href="https://rubelahmed57.github.io/">webpage</a></li>
 		<li>Yuting Cao, PhD, <a href=" http://cao2.myweb.usf.edu">webpage</a></li>
-			<li>Hernan Palombo, PhD, <a href="https://rubelahmed57.github.io/">webpage</a></li>
+			<li>Hernan Palombo, PhD</li>
   	</ul>
   	</p>
   	
