--- a/research/index.htm
+++ b/research/index.htm
@@ -59,11 +59,15 @@
 			<li>
 			   <strong><a href="https://github.com/sees-usf/ProbMC">Scalable methods for probabilistic model checking</a></strong> 
 				<br>
-				Recetnly, we received an NSF award to support this project. If you are interested in joining this project, 
-				please visit the project page by cliking the porject title.
+				Recetnly, we received an NSF award to support this project. If you are interested in knowing more about this project, 
+				please visit the project page by cliking the project title.
 			</li>
 			<li>
 			   <strong><a href="https://github.com/sees-usf/MCCS">Efficient model checking of parallel and distributed systems</a></strong>
+				<br>
+				In this project, we try to address the **state space explosion** problem often encountered during model checking systems
+				of high concurrency. The central idea behind our research is divide-n-conquer, *i.e.*, verification of an entire system
+				is inferred by results from verification of consisting components. 
 			</li>
 			</ul>
   	</li>
