--- a/index.htm
+++ b/index.htm
@@ -63,8 +63,9 @@
     <p class="nobot">
     Our overall research objective is to address challenges as outlined above, and future challenges 
     brought by new applications or as results of new technologies.  
-    Our broad research areas include **formal methods**, **computer architecture**, **embedded systems**, 
-		**VLSI design**, and 	**design automation**.  Currently, we are looking at hardware safety and security assurance 
+	    Our broad research areas include <strong>formal methods</strong>, <strong>computer architecture</strong>, 
+	    <strong>embedded systems</strong>, 
+	    <strong>VLSI design</strong>, and 	<strong>design automation</strong>.  Currently, we are looking at hardware safety and security assurance 
 		by investigating various design time and runtime methods and techniques, application of machine learning in 
 		design automation, efficient hardware design of machine learning algorithms, and formal verification and 
 		reasoning of hardware and software systems. Please visit our research page for more information
