--- a/research/index.htm
+++ b/research/index.htm
@@ -65,8 +65,8 @@
 			<li>
 			   <strong><a href="https://github.com/sees-usf/MCCS">Efficient model checking of parallel and distributed systems</a></strong>
 				<br>
-				In this project, we try to address the **state space explosion** problem often encountered during model checking systems
-				of high concurrency. The central idea behind our research is divide-n-conquer, *i.e.*, verification of an entire system
+				In this project, we try to address the <strong>state space explosion</strong> problem often encountered during model checking systems
+				of high concurrency. The central idea behind our research is divide-n-conquer, <em>i.e.</em>, verification of an entire system
 				is inferred by results from verification of consisting components. 
 			</li>
 			</ul>
