--- a/research/index.htm
+++ b/research/index.htm
@@ -4,7 +4,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <TITLE>SEES - Research</TITLE>
+  <TITLE>SEES@USF - Research for Secure, Efficient, and Evolvable Computing System</TITLE>
     <link rel="stylesheet" type="text/css" href="../myStyle.css">
 </head>
 <body>
