--- a/teach/index.htm
+++ b/teach/index.htm
@@ -4,7 +4,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <TITLE>SEES - Teaching</TITLE>
+  <TITLE>SEES@USF - Teaching</TITLE>
     <link rel="stylesheet" type="text/css" href="../myStyle.css">
 </head>
 <body>
