--- a/people/index.htm
+++ b/people/index.htm
@@ -45,22 +45,24 @@
   	<p style="margin-top:4vw">
   	<h2>Current Students</h2>
   	<ul>
+		<li>Mohammad Ahmadi, PhD</li>
   		<li>Md Rubel Ahmed, PhD, <a href="https://rubelahmed57.github.io/">webpage</a></li>
 		<li>Yuting Cao, PhD, <a href=" http://cao2.myweb.usf.edu">webpage</a></li>
-			<li>Hernan Palombo, PhD</li>
+		<li>Hernan Palombo, PhD</li>
+		<li>Jana Giovanni, REU, Fall, 2019</li>
   	</ul>
   	</p>
   	
     <p style="margin-top:4vw">
   	<h2>Graduated Students</h2>
   	<ul>
-  		<li>Haiqiong Yao, PhD</li>
-      <li>Yuting Cao, MS</li>
-      <li>Hernan Palombo, MS</li>
-  		<li>Yingying Zhang, MS</li>
-      <li>Ryan Mabry, MS</li>
-	  	<li>Jared Ahrens, MS</li>
-      <li>Emmanual Rodriguez</li>
+  		<li>Haiqiong Yao, PhD, 2010</li>
+      <li>Yuting Cao, MS, 2015</li>
+      <li>Hernan Palombo, MS, 2014</li>
+  		<li>Yingying Zhang, MS, 2010</li>
+      <li>Ryan Mabry, MS, 2006</li>
+	  	<li>Jared Ahrens, MS, 2006</li>
+      <li>Emmanual Rodriguez, REU, 2012-2013</li>
   	</ul>
   	</p>
   </div>
