--- a/misc/write-proposal.htm
+++ b/misc/write-proposal.htm
@@ -1,1 +1,17 @@
-kj;l
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <TITLE>SEES@USF - Research for Secure, Efficient, and Evolvable Computing System</TITLE>
+    <link rel="stylesheet" type="text/css" href="myStyle.css">
+</head>
+<body>
+
+  <a href="#ref1">This is a reference to the bottom of this document</a>
+
+
+  <a name="ref1">text</a>
+</body>
+</html>
