--- a/misc/write-proposal.htm
+++ b/misc/write-proposal.htm
@@ -9,9 +9,18 @@
 </head>
 <body>
 
-  <a href="#ref1">This is a reference to the bottom of this document</a>
+The following elements are used when a proposal is reviewed by the NSF, therefore, a successful proposal must explicitly address all of them.
+<ol>
+  <li>What is the potential for the proposed activity to:</li>
+    <ol>
+      <li>Advance knowledge and understanding within its own field or across different fields (Intellectual Merit); and</li>
+      <li>Benefit society or advance desired societal outcomes (Broader Impacts)?</li>
+    </ol>
+  <li>To what extent do the proposed activities suggest and explore creative, original, or potentially transformative concepts?</li>
 
-
-  <a name="ref1">text</a>
+  <li>Is the plan for carrying out the proposed activities well-reasoned, well-organized, and based on a sound rationale?</li>
+  <li>Does the plan incorporate a mechanism to assess success?</li>
+  <li>How well qualified is the individual, team, or organization to conduct the proposed activities?</li>
+  <li>Are there adequate resources available to the PI (either at the home organization or through collaborations) to carry out the proposed activities?</li>
 </body>
 </html>
