--- a/misc/write-proposal.htm
+++ b/misc/write-proposal.htm
@@ -22,5 +22,24 @@ The following elements are used when a proposal is reviewed by the NSF, therefor
   <li>Does the plan incorporate a mechanism to assess success?</li>
   <li>How well qualified is the individual, team, or organization to conduct the proposed activities?</li>
   <li>Are there adequate resources available to the PI (either at the home organization or through collaborations) to carry out the proposed activities?</li>
+</ol>
+  
+  <strong>Intellectual Merits</strong><br>
+  <ol>
+    <li>Important/significance of the project</li>
+    <li>Qualitification of PIs</li>
+    <li>Creativity/originality/innovation/transformative potential of the methods and approaches -- e.g. move the field into a new direction (transformative), 
+      or advance the state-of-the-art in a novel and innovative way</li>
+    <li>Well-conceived and organized methods and approaches</li>
+    <li>Resource adaquacy</li>
+  </ol>
+  
+  <strong>Broader Impacts</strong><br>
+  <ol>
+    <li>Advance discovery and understanding while promoting teaching and learning</li>
+    <li>Promote participation of under-represented groups</li>
+    <li>Enhance infrastructure for research and education</li>
+  </ol>
+  
 </body>
 </html>
