--- a/misc/write-proposal.htm
+++ b/misc/write-proposal.htm
@@ -29,17 +29,71 @@ The following elements are used when a proposal is reviewed by the NSF, therefor
     <li>Important/significance of the project</li>
     <li>Qualitification of PIs</li>
     <li>Creativity/originality/innovation/transformative potential of the methods and approaches -- e.g. move the field into a new direction (transformative), 
-      or advance the state-of-the-art in a novel and innovative way</li>
-    <li>Well-conceived and organized methods and approaches</li>
-    <li>Resource adaquacy</li>
+      or advance the state-of-the-art in a novel and innovative way.  Some example descriptions: 
+      <em>"There are potentially transformative apsects of the proposed work, which if successful could ..."</em>, 
+      or, <em>"These activities are potentailly transformative because ..."</em>
+    </li>
+    <li>
+      Well-conceived and organized methods and approaches
+    </li>
+    <li>
+      Resource adaquacy
+    </li>
   </ol>
   
   <strong>Broader Impacts</strong><br>
   <ol>
-    <li>Advance discovery and understanding while promoting teaching and learning</li>
+    <li>
+      Advance discovery and understanding while promoting teaching and learning
+      <ul>
+      <li>
+        Develop and contribute educational materials based on your research that you can include in a teaching database like a K-16 digital library;
+      </li>
+      <li>
+        Involve K-12, undergraduate or graduate students as participants in your research;
+      </li>
+			<li>
+				Integrate your project activities into K-12, undergraduate and graduate teaching of science, math and
+engineering;
+			</li>
+			<li>
+				Collaborate with educators and researchers to incorporate your research into learning and education;
+			</li>
+			<li>
+					Involve your graduate and post-doctoral student researchers in undergraduate teaching activities;
+			</li>
+			<li>
+				Invite student teams involved in your research to make presentations to professional societies;
+			</li>
+			<li>
+				Establish mentoring programs for high school, undergraduate and graduate students, as well as research
+technicians; or
+			</li>
+			<li>
+				Involve your team and your project activities in the recruitment, training or professional development of K-12 math and science teachers.
+			</li>	
+      </ul>
+    </li>
     <li>Promote participation of under-represented groups</li>
     <li>Enhance infrastructure for research and education</li>
+    <li>Broad dissemination</li>
+    <li>Societal benefits beyond the directly related technical field</li>
   </ol>
   
+In the proposal, try to use statements or sentences that reviewers can use to write his/her reviews. 
+An example proposal summary is shown below.
+  
+  The <strong>intellectual merit</strong> of the project is its transformational approach, which integrates
+  modeling the fate of a micropollutant in a biological process with a fundamental co-substrate mechanism, 
+  bioselector design effects, and microbial composition based on molecular methods. A second potential far 
+  reaching benefit will be the development of pure cultures capable of EE2 degradation under conditions similar 
+  to a wastewater treatment plant (WWTP) for future kinetic and genetic studies, and development of qPCR primer
+  sets for monitoring select EE2-degrading heterotrophs in WWTP facilities.
+
+  The <strong>broader impacts</strong> of the project are benefits to society by providing a basis to optimize 
+  WWTP biotreatment design to minimize estrogen release to the environment. Direct educational benefits include
+  the training of graduate students, and participation of undergraduate researchers. Increased participation by 
+  under-represented groups will be realized through established university programs and continued partnership 
+  with the Office of Diversity.
 </body>
 </html>
