--- a/misc/write-proposal.htm
+++ b/misc/write-proposal.htm
@@ -9,6 +9,58 @@
 </head>
 <body>
 
+<section><h2>General Elements and Organization of a Proposal<h2>
+Some key elements are commonly included in the organization of a proposal.  First, it should describe one of the following things to motivate the proposal.
+  <ol>
+    <li>
+      Goal statements -- general statements of a project's ultimate goals, which are broad, idealistic, and visionary. Examples:
+      <ol>
+        <li>
+          Our goal with this project is to improve the teaching of STEM subjects to undergraduates
+        </li>
+        <li>
+          This research will develop an analytical framework for classifying the learning styles of middle students
+        </li>
+      </ol>
+    </li>
+    <li>
+      Hypothesis: a specific, testable assumption or conjecture that research data are expected to support. Examples:
+      <oL>
+        <li>
+          We will test the hypothesis that large neurons are selectively destroyed in Alzhemers Disease by measureing the sizes of ganglion cells in retinas of AD patients compared with those in control groups.      
+        </li>
+        <li>
+          We hypothesize that increaed consumption of omega-3 seafood, fresh fruits and vegetables will reduce the progression of cognitive impairment in patients diagnosed with Alzheimer's Disease.
+        </li>
+      </ol>
+    </li>
+    <li>
+      Research questions: inquiries related to lack of knowledge in an important area of research, asnswers to which are sought through the research design. Examples:
+      <ol>
+        <li>
+          Are there significant variations in standards of practice among physicians?
+        </li>
+        <li>
+          Are there common lifestyle traits among those suffering from diabetes in this region?
+        </li>
+      </ol>
+    </li>
+  </ol>
+  
+<p>
+  <strong>Objectives</strong>: specific, measurable outcomes, milestones, and benchmarks to be achieved in moving toward the project goal.
+  <ol>
+    <li>
+      Some objectives need to follow the goals, hypothesis, or research questions raised at the beginning to indicate what will be produced.  Completion of objectives will lead to the goals to be achieved. 
+    </li>
+    <li>
+      Objectives can be (1) products like tools, teaching kits, etc, (2) a process or methodology, e.g. design and test three new modules for teaching economics to undergraduate, (3) performance, (4) behavioral, e.g. this treatment will enable patients to learn to walk with extenal support. 
+    </li>
+  </ol>
+</p>
+  </section>
+  
+<section> <h2>NSF Proposal</h2>
 The following elements are used when a proposal is reviewed by the NSF, therefore, a successful proposal must explicitly address all of them.
 <ol>
   <li>What is the potential for the proposed activity to:</li>
@@ -98,5 +150,6 @@ An example proposal summary is shown below.
   under-represented groups will be realized through established university programs and continued partnership 
   with the Office of Diversity.
   </p>
+  </section>
 </body>
 </html>
