--- a/misc/write-proposal.htm
+++ b/misc/write-proposal.htm
@@ -35,7 +35,7 @@ Some key elements are commonly included in the organization of a proposal.  Firs
       </ol>
     </li>
     <li>
-      Research questions: inquiries related to lack of knowledge in an important area of research, asnswers to which are sought through the research design. Examples:
+      Research questions: inquiries related to lack of knowledge in an important area of research, asnswers to which are sought through the research design.  Research questions may be viewed as hypotheses posed as quesitons. Examples:
       <ol>
         <li>
           Are there significant variations in standards of practice among physicians?
