--- a/misc/write-proposal.htm
+++ b/misc/write-proposal.htm
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<section><h2>General Elements and Organization of a Proposal<h2>
+<section><h2>General Elements and Organization of a Proposal</h2>
 Some key elements are commonly included in the organization of a proposal.  First, it should describe one of the following things to motivate the proposal.
   <ol>
     <li>
