--- a/people/index.htm
+++ b/people/index.htm
@@ -45,17 +45,17 @@
   	<p style="margin-top:4vw">
   	<h2>Current Students</h2>
   	<ul>
-		<li>Mohammad Ahmadi, PhD</li>
-  		<li>Md Rubel Ahmed, PhD, <a href="https://rubelahmed57.github.io/">webpage</a></li>
-		<li>Yuting Cao, PhD, <a href=" http://cao2.myweb.usf.edu">webpage</a></li>
-		<li>Hernan Palombo, PhD</li>
-		<li>Jana Giovanni, REU, Fall, 2019</li>
+		  <li>Mohammad Ahmadi, PhD, 2019</li>
+  		<li>Md Rubel Ahmed, PhD, 2018 <a href="https://rubelahmed57.github.io/">webpage</a></li>
+		  <li>Hernan Palombo, PhD, 2013</li>
+		  <li>Jana Giovanni, REU, Fall, 2019</li>
   	</ul>
   	</p>
   	
     <p style="margin-top:4vw">
   	<h2>Graduated Students</h2>
   	<ul>
+			<li>Yuting Cao, PhD, 2019, <a href=" http://cao2.myweb.usf.edu">webpage</a></li>
   		<li>Haiqiong Yao, PhD, 2010</li>
       <li>Yuting Cao, MS, 2015</li>
       <li>Hernan Palombo, MS, 2014</li>
