--- a/misc/nsf-summary.htm
+++ b/misc/nsf-summary.htm
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <TITLE>SEES@USF - Research for Secure, Efficient, and Evolvable Computing System</TITLE>
-    <link rel="stylesheet" type="text/css" href="myStyle.css">
+    <link rel="stylesheet" type="text/css" href="../../myStyle.css">
 </head>
 <body>
 
