--- a/misc/nsf-summary.htm
+++ b/misc/nsf-summary.htm
@@ -13,7 +13,8 @@
 <p>
 NSF requires a proposal summary to explicitly include two sections: <b>Intellectual Merits</b> and <b>Broader Impacts</b>. The summary structure below follows that requirements.  
 </p>
-<p><b>Intellectual Merits</b>
+<p style="margin-left:4vw">
+  <b>Intellectual Merits</b>
   <ol>
     <li>Develop the broadest context for the proposed research</li>
     <li>State research questions: hypothese to test, objectives to achieve, etc.</li>
@@ -22,7 +23,8 @@ NSF requires a proposal summary to explicitly include two sections: <b>Intellect
     <li>Outline the proposed work or activities to perform</li>
   </ol>
   
-<p><strong>Broader Impacts</strong>
+<p style="margin-left:4vw">
+  <strong>Broader Impacts</strong>
   <ol>
     <li>Outline projected outputs and results from the proposal</li>
     <li>State how the proposed research will advance the sibject area, and its implications for other fields or problems</li>
