--- a/misc/nsf-summary.htm
+++ b/misc/nsf-summary.htm
@@ -9,11 +9,12 @@
 </head>
 <body>
 
-<section><h2>NSF Proposal Summary -- A General Structure</h2>
+<div style="margin-left:4vw">
+  <h2>NSF Proposal Summary -- A General Structure</h2>
 <p>
 NSF requires a proposal summary to explicitly include two sections: <b>Intellectual Merits</b> and <b>Broader Impacts</b>. The summary structure below follows that requirements.  
 </p>
-<p style="margin-left:4vw">
+<p>
   <b>Intellectual Merits</b>
   <ol>
     <li>Develop the broadest context for the proposed research</li>
@@ -23,7 +24,7 @@ NSF requires a proposal summary to explicitly include two sections: <b>Intellect
     <li>Outline the proposed work or activities to perform</li>
   </ol>
   
-<p style="margin-left:4vw">
+<p>
   <strong>Broader Impacts</strong>
   <ol>
     <li>Outline projected outputs and results from the proposal</li>
