--- a/people/index.htm
+++ b/people/index.htm
@@ -55,7 +55,8 @@
     <p style="margin-top:4vw">
   	<h2>Graduated Students</h2>
   	<ul>
-			<li>Yuting Cao, PhD, 2019, <a href=" http://cao2.myweb.usf.edu">webpage</a></li>
+			<li>Yuting Cao, PhD, 2019, <a href="https://www.linkedin.com/in/caoyuting/?ts=1576368962044&trk=profile_share_wechat&from=singlemessage&isappinstalled=0">webpage</a><!--a href="http://cao2.myweb.usf.edu">webpage</a-->
+			</li>
   		<li>Haiqiong Yao, PhD, 2010</li>
       <li>Yuting Cao, MS, 2015</li>
       <li>Hernan Palombo, MS, 2014</li>
