--- a/research/index.htm
+++ b/research/index.htm
@@ -47,7 +47,7 @@
 			<li><strong><a href="https://github.com/sees-usf/SeqMining">Sequential Pattern Mining using Data Mining Techniques</a></strong></li>
 			</ul>
 			<ul>
-			<li><strong><a href="https://github.com/sees-usf/spec-mining/RNNMining">Sequential Pattern Mining using Recurrent Neural Network</a></strong></li>
+			<li><strong><a href="https://github.com/sees-usf/RNNMining">Sequential Pattern Mining using Recurrent Neural Network</a></strong></li>
 			</ul>
 		</li>
 		<li>
