--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@
   
   <div class="column">
   	<div class="card">
-  	<p class="notop", line-height="1.6">
+  	<p class="notop">
   	Increasing computing capability is a key enabler for many emerging applications as 
   	exemplified by smart healthy, smart city, smart building, smart transportation, autonomous driving, etc.
   	Functions and services offered by those applications are increasingly enhanced by integrating 
