--- a/index.htm
+++ b/index.htm
@@ -46,7 +46,7 @@
   	perform diverse tasks.     
   	</p>
   	
-  	<p>
+  	<p style="line-height:1.5">
   	Along with all benefits from ever growing network of connected devices with more powerful
   	computing capabilities come various challenges.  First, security has been and will become even
   	bigger problem as many devices we experience everyday have critical impact on our well beings 
