--- a/research/index.htm
+++ b/research/index.htm
@@ -42,13 +42,30 @@
 		Design HW/SW agents that can detect security anomaly and mitigate attacks with minimal human intervention.
 		</li>
 		<li>
-		<strong>Machine learning for design automation</strong>
-			<ul>
+		<strong>Specification mining for system-on-chip design validation</strong>
+		
+		<p style="font-size:1.3vw; line-height:1.5">
+		Comprehensive and well-defined specifications are necessary to perform rigorous and thorough validation of 
+		system-on-chip~(SoC) designs. However, in practice such specifications are usually not available, often 
+		ambiguous, incomplete, or even contain errors. Moreover, as a SoC design gradually progresses across design
+		stages, the connection between the original specifications and the design implementation may become imprecise
+		and disjoint. The specification problems may lead to potential misunder-standings of the design 
+		behavior, introduce unintentional behavior into the design, and hinder effective and efficient validation process. 
+		This project addresses that problem by developing automated methods to extract patterns from SoC execution 
+		traces using data mining and machine learning techniques. The extracted patterns are served as specification 
+		which can be used in SoC validation and debug.
+		</p>
+		
+		<p style="font-size:1.3vw; line-height:1.5">
+			More information about on-going research about this project can be found in our <a href="https://github.com/sees-usf/Spec-mining">GitHub repository</a>.
+			<!--ul>
 			<li><strong><a href="https://github.com/sees-usf/SeqMining">Sequential Pattern Mining using Data Mining Techniques</a></strong></li>
 			</ul>
 			<ul>
 			<li><strong><a href="https://github.com/sees-usf/RNNMining">Sequential Pattern Mining using Recurrent Neural Network</a></strong></li>
-			</ul>
+			</ul-->
+		</p>
+			
 		</li>
 		<li>
 		<strong>Hardware/software design of machine learning under latency and energy constraints</strong>
