--- a/people/index.htm
+++ b/people/index.htm
@@ -44,10 +44,11 @@
   	
   	<p style="margin-top:4vw">
   	<h2>Current Students</h2>
-  	<ul>
+  	<ul style="line-height:1.5">
 		  <li>Mohammad Ahmadi, PhD, 2019</li>
   		<li>Md Rubel Ahmed, PhD, 2018 <a href="https://rubelahmed57.github.io/">webpage</a></li>
 		  <li>Hernan Palombo, PhD, 2013</li>
+			<li>Julian De Joseph, REU, Spring 2020</li>
 		  <li>Jana Giovanni, REU, Fall, 2019</li>
   	</ul>
   	</p>
