--- a/research/index.htm
+++ b/research/index.htm
@@ -67,27 +67,26 @@
 		</p>
 			
 		</li>
-		<li>
-		<strong>Hardware/software design of machine learning under latency and energy constraints</strong>
-		</li>
   	<li>
 		<strong>Testing, verification, and validation of software, hardware, and embedded systems</strong>
 			<ul>
 			<li>
-			   <strong><a href="https://github.com/sees-usf/ProbMC">Scalable methods for probabilistic model checking</a></strong> 
-				<br>
-				Recetnly, we received an NSF award to support this project. If you are interested in knowing more about this project, 
-				please visit the project page by cliking the project title.
+			  <strong><a href="https://github.com/sees-usf/ProbMC">Scalable methods for probabilistic model checking</a></strong> 
+				<p style="font-size:1.3vw; line-height:1.5; margin-top:0">
+				Recetnly, we received an NSF award to support this project. If you are interested in knowing more about this project, please visit the project page by cliking the project title.
+				</p>
 			</li>
 			<li>
 			   <strong><a href="https://github.com/sees-usf/MCCS">Efficient model checking of parallel and distributed systems</a></strong>
-				<br>
-				In this project, we try to address the <strong>state space explosion</strong> problem often encountered during model checking systems
-				of high concurrency. The central idea behind our research is divide-n-conquer, <em>i.e.</em>, verification of an entire system
-				is inferred by results from verification of consisting components. 
+				<p style="font-size:1.3vw; line-height:1.5; margin-top:0">
+				In this project, we try to address the <strong>state space explosion</strong> problem often encountered during model checking systems of high concurrency. The central idea behind our research is divide-n-conquer, <em>i.e.</em>, verification of an entire system is inferred by results from verification of consisting components. 
+				</p>
 			</li>
 			</ul>
   	</li>
+		<li>
+		<strong>Hardware/software design of machine learning under latency and energy constraints</strong>
+		</li>
   	</ul>
   	</div>
   
