--- a/research/index.htm
+++ b/research/index.htm
@@ -44,7 +44,7 @@
 		<li>
 		<strong>Specification mining for system-on-chip design validation</strong>
 		
-		<p style="font-size:1.3vw; line-height:1.5">
+		<p style="font-size:1.3vw; line-height:1.5; margin-top:0.2vw">
 		Comprehensive and well-defined specifications are necessary to perform rigorous and thorough validation of 
 		system-on-chip~(SoC) designs. However, in practice such specifications are usually not available, often 
 		ambiguous, incomplete, or even contain errors. Moreover, as a SoC design gradually progresses across design
@@ -78,7 +78,7 @@
 			</li>
 			<li>
 			   <strong><a href="https://github.com/sees-usf/MCCS">Efficient model checking of parallel and distributed systems</a></strong>
-				<p style="font-size:1.3vw; line-height:1.5; margin-top:0">
+				<p style="font-size:1.3vw; line-height:1.5; margin-top:0.2vw">
 				In this project, we try to address the <strong>state space explosion</strong> problem often encountered during model checking systems of high concurrency. The central idea behind our research is divide-n-conquer, <em>i.e.</em>, verification of an entire system is inferred by results from verification of consisting components. 
 				</p>
 			</li>
