--- a/people/index.htm
+++ b/people/index.htm
@@ -38,7 +38,7 @@
     <p style="margin-top:0">
 	<strong style="font-size:1.6vw;">Faculty Advisor</strong><br>
   	<ul>
-  		<li>Hao Zheng, PhD, <a href="http://www.cse.usf.edu/~haozheng">bio</a></li>
+  		<li>Hao Zheng, PhD, <a href="http://www.cse.usf.edu/~haozheng">bio, &nbsp <a href="https://www.linkedin.com/in/hao-zheng-37267220/">Linkedin</a></a></li>
   	</ul>
   	</p>
 	</div>
